tests/ui/unstable-features/overlapping_marker_traits-feature-gate.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Foo<_>`:
  --> $DIR/overlapping_marker_traits-feature-gate.rs:6:1
   |
6  | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
...
13 | impl<T> Unpin for Foo<T> {}
   | ------------------------ first implementation here
